@@ -3,6 +3,7 @@ package com.patrick.mongodbspring.config;
 import com.patrick.mongodbspring.domain.Post;
 import com.patrick.mongodbspring.domain.User;
 import com.patrick.mongodbspring.dto.AuthorDTO;
+import com.patrick.mongodbspring.dto.CommentDTO;
 import com.patrick.mongodbspring.repository.PostRepository;
 import com.patrick.mongodbspring.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,6 +12,7 @@ import org.springframework.context.annotation.Configuration;
 
 import java.text.SimpleDateFormat;
 import java.util.Arrays;
+import java.util.List;
 import java.util.TimeZone;
 
 @Configuration
@@ -38,9 +40,18 @@ public class instantiation implements CommandLineRunner {
         Post post1 = new Post(null, sdf.parse("16/07/2022"), "Minha nova vida", "Vou viajar para São Paulo. Abraços!", new AuthorDTO(maria));
         Post post2 = new Post(null, sdf.parse("17/07/2022"), "Mudança pronta", "Acordei feliz hoje!", new AuthorDTO(maria));
 
-        postRepository.saveAll(Arrays.asList(post1, post2));
+        postRepository.saveAll(List.of(post1, post2));
 
-        maria.getPosts().addAll(Arrays.asList(post1, post2));
+        maria.getPosts().addAll(List.of(post1, post2));
         userRepository.save(maria);
+
+        CommentDTO c1 = new CommentDTO("Que bacana!", sdf.parse("18/08/2022"), new AuthorDTO(alex));
+        CommentDTO c2 = new CommentDTO("Parabéns maria!", sdf.parse("19/08/2022"), new AuthorDTO(bob));
+        CommentDTO c3 = new CommentDTO("Maravilha!", sdf.parse("18/08/2022"), new AuthorDTO(alex));
+
+        post1.getComments().addAll(List.of(c1, c2));
+        post2.getComments().addAll(List.of(c3));
+
+        postRepository.saveAll(List.of(post1, post2));
     }
 }
